renamce switch to appliance
